--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@ body{
     font-family: roboto;
     background-color: rgb(253, 236, 0);
     display: grid;
-    grid-template-rows: 150px 150px 240px 80px;
+    grid-template-rows: 100px 60px 150px 240px 100px;
     margin: 0;
 }
 
-.title, h3{
+.title{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -15,19 +15,37 @@ body{
 
 .flex{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     
 }
 
-.flex > h2 {
-    width: 230px;
+.track{
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-h3 {
-    font-size: 50px;
+.helper{
+    padding: 0px 10px 0px 10px;
+    max-width: 350px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    margin: 0;
+    background-color: rgb(54, 54, 54);
+    color: white;
+    border-radius: 20px;
+    font-size: 20px;
+    border: none;
+}
+
+
+.flex > h2 {
+    width: 220px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .buttons {
@@ -57,6 +75,41 @@ p {
     padding-top: 10px;
 }
 
+button{
+    width: 250px;
+    height: 70px;
+    background-color: rgb(54, 54, 54);
+    color: white;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    border: none;
+    transition: background-color 0.3s, color 0.3s;
+    
+}
+
+button:hover {
+    color: black;
+    background-color: rgb(255, 255, 255);
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+}
+
+button:active{
+    color: black;
+    background-color: rgb(177, 177, 177);
+    border-color: black;
+    border-width: 2px;
+    border-style: solid;
+}
+
+.but-div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media only screen and (max-width: 600px) {
     .buttons{
         flex-direction: column;
@@ -76,10 +129,8 @@ p {
         height: 130px;
     }
     body{
-        grid-template-rows: 100px 70px 380px 80px;
-    }
-    h3 {
-        margin: 0;
+        grid-template-rows: 100px 50px 70px 1fr 50px;
     }
 }
+     
      
